Set automatic publish path for recal plots

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,10 +1,15 @@
 process {
     executor = 'slurm'
     penv = "smp"
-
+    publishDir = [
+        path: { "${params.savePath}/data_tables/" },
+        mode: 'copy',
+        pattern: '*recal_data_[0-9].table'
+    ]
 }
 
-executor{
+executor {
     name = 'slurm'
     queueSize = 25
 }
+
