Use correct nextflow variable passing + include genome indexing

--- a/nextflow.config
+++ b/nextflow.config
@@ -8,6 +8,10 @@ process {
     ]
 }
 
+workflow.onComplete = {
+    println "Pipeline complete"
+}
+
 executor {
     name = 'slurm'
     queueSize = 25
