Better handling of input path + generate recode outputs

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,7 +1,7 @@
 singularity.enabled = true
+tower.accessToken = '77bc7427c520828b18726d8c3fc52937019cddbc'
 
 process {
-    executor = 'slurm'
     penv = "smp"
     publishDir = [
         path: { "${params.savePath}/data_tables/" },
