Cleaner process resource allocation

--- a/nextflow.config
+++ b/nextflow.config
@@ -3,6 +3,7 @@ tower.accessToken = '77bc7427c520828b18726d8c3fc52937019cddbc'
 
 process {
     penv = "smp"
+    queue = 'bharpur'
     publishDir = [
         path: { "${params.savePath}/data_tables/" },
         mode: 'copy',
