Temporary fix for queue handling

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,9 +1,14 @@
 singularity.enabled = true
 tower.accessToken = '77bc7427c520828b18726d8c3fc52937019cddbc'
 
+executor {
+    name = 'slurm'
+    queueSize = 25
+}
+
 process {
+    clusterOptions = '-A bharpur'
     penv = "smp"
-    queue = 'bharpur'
     publishDir = [
         path: { "${params.savePath}/data_tables/" },
         mode: 'copy',
@@ -13,10 +18,5 @@ process {
 
 workflow.onComplete = {
     println "Pipeline complete"
-}
-
-executor {
-    name = 'slurm'
-    queueSize = 25
 }
 
