Bugfixes and resource allocation tweaks

--- a/nextflow.config
+++ b/nextflow.config
@@ -3,10 +3,11 @@ tower.accessToken = '77bc7427c520828b18726d8c3fc52937019cddbc'
 
 executor {
     name = 'slurm'
-    queueSize = 25
+    queueSize = 10
 }
 
 process {
+    cache ='lenient'
     clusterOptions = '-A bharpur'
     penv = "smp"
     publishDir = [
