--- a/nextflow.config
+++ b/nextflow.config
@@ -9,6 +9,7 @@ executor {
 process {
     cache ='lenient'
     clusterOptions = '-A bharpur'
+    errorStrategy = 'retry'
     penv = "smp"
     publishDir = [
         path: { "${params.savePath}/data_tables/" },
