Update for new Negishi submission format

--- a/nextflow.config
+++ b/nextflow.config
@@ -8,7 +8,7 @@ executor {
 
 process {
     cache ='lenient'
-    clusterOptions = '-A bharpur'
+    clusterOptions = '-A bharpur -p cpu'
     errorStrategy = 'retry'
     penv = "smp"
     publishDir = [
